Switch from custom error responses to REST error codes
- Introduce custom TheiaCloud errors
- Introduce custom TheiaCloud exception that is mapped to errors
- Remove custom error responses and regenerate REST client
