# java/service/org.eclipse.theia.cloud.service/src/main/java/org/eclipse/theia/cloud/service/session/SessionLaunchResponse.java
@@ -1,65 +1,0 @@
-/********************************************************************************
- * Copyright (C) 2022 EclipseSource, Lockular, Ericsson, STMicroelectronics and 
- * others.
- *
- * This program and the accompanying materials are made available under the
- * terms of the Eclipse Public License v. 2.0 which is available at
- * http://www.eclipse.org/legal/epl-2.0.
- *
- * This Source Code may also be made available under the following Secondary
- * Licenses when the conditions for such availability set forth in the Eclipse
- * Public License v. 2.0 are satisfied: GNU General Public License, version 2
- * with the GNU Classpath Exception which is available at
- * https://www.gnu.org/software/classpath/license.html.
- *
- * SPDX-License-Identifier: EPL-2.0 OR GPL-2.0 WITH Classpath-exception-2.0
- ********************************************************************************/
-package org.eclipse.theia.cloud.service.session;
-
-import org.eclipse.microprofile.openapi.annotations.media.Schema;
-import org.eclipse.theia.cloud.common.k8s.resource.SessionSpec;
-import org.eclipse.theia.cloud.service.ServiceResponse;
-
-@Schema(name = "SessionLaunchResponse", description = "Response for a session launch. Allows to access the URL of the session or the error that occured during launch.")
-public class SessionLaunchResponse extends ServiceResponse {
-    public static final String KIND = "sessionLaunchResponse";
-
-    @Schema(description = "The URL of the running workspace or empty if there was an error.", required = false)
-    public String url;
-
-    public SessionLaunchResponse() {
-	super(KIND);
-    }
-
-    public SessionLaunchResponse(boolean success, String error, String url) {
-	super(KIND, success, error);
-	this.url = url;
-    }
-
-    /**
-     * @param session the {@link SessionSpec}
-     * @return A {@link SessionLaunchResponse} if the spec has an URL or an Error,
-     *         <code>null</code> otherwise.
-     */
-    public static SessionLaunchResponse from(SessionSpec session) {
-	if (session.hasUrl() || session.hasError()) {
-	    return new SessionLaunchResponse(session.hasUrl(), session.getError(), session.getUrl());
-	}
-	return null;
-    }
-
-    public static SessionLaunchResponse error(String error) {
-	return new SessionLaunchResponse(false, error, "");
-    }
-
-    public static SessionLaunchResponse ok(String url) {
-	return new SessionLaunchResponse(true, "", "");
-    }
-
-    @Override
-    public String toString() {
-	return "SessionLaunchResponse [url=" + url + ", kind=" + kind + ", success=" + success + ", error=" + error
-		+ "]";
-    }
-
-}
